<resources>
    <string name="app_name">Swipr</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="info">Information</string>
    <string name="directions">Directions</string>
    <string name="submitImg">Submit Image</string>
    <string name="option">Option</string>
    <string name="dates">Dates</string>
    <string name="festivalLogo">Festival Logo</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_details">Enter Details</string>
    <string name="upload">Upload</string>
    <string name="title_activity_login_reg">LoginReg</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Enter Password</string>
    <string name="logout">Log Out</string>
    <string name="viewGallery">View Gallery</string>
    <string name="viewMap">Image Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="ImgSearch">Search Image</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_image">Search Image</string>
    <string name="next_image">Next Image</string>
</resources>
