<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ie.stepout.swipr.SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">


        <ImageView
            android:layout_width="218dp"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="0.18" />


        <Button
            android:id="@+id/viewGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/viewGallery"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/submitImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/submitImg"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp" />


        <Button
            android:id="@+id/viewMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/viewMap"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/logout"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
