<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imgView"
        android:layout_marginTop="72dp"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_details"
        android:layout_below="@+id/imgView"
        android:layout_alignStart="@+id/chooseImg"
        android:layout_marginTop="10dp" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_image"
        android:id="@+id/chooseImg"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_below="@+id/imgView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="60dp" />


    <Button
        android:text="@string/next_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/chooseImg"
        android:layout_alignStart="@+id/chooseImg" />







</RelativeLayout>