<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:id="@+id/chooseImg"
        android:layout_above="@+id/uploadImg"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uploadImg"
        android:layout_above="@+id/imgView"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_marginBottom="25dp" />


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imgView"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/text_input"
        android:layout_centerHorizontal="true"
        android:contentDescription="" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_details"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/overlay_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_alignBottom="@+id/imgView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>